test/fail_compilation/fail307.d

void main()
{
  ubyte b = 6;
  short c5 = cast(int)(b + 6.1);
}
